<resources>
    <string name="ipServidor">"https://godinner.tk:8080"</string>
    <string name="ipServidorSocket">"https://godinner.tk:3000"</string>
    <string name="ipServidorFotos">"https://fotos.godinner.tk"</string>
    <string name="fotoLanchePadrao">"/restaurante/produto/1569953042416–115–840x560.jpg"</string>

    <string name="app_name">GoDinner</string>
    <string name="carregando">Carregando…</string>
    <string name="logo_app">Logo da aplicação</string>
    <string name="lbl_email">E-MAIL</string>
    <string name="lbl_senha">SENHA</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="ou_conectar_com">OU CONECTAR COM</string>
    <string name="facebook_app_id">515327789216883</string>
    <string name="fb_login_protocol_scheme">fb515327789216883</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_cadastro">Vamos fazer seu cadastro</string>
    <string name="lbl_senha2">Senha</string>
    <string name="btn_proximo">Próximo</string>
    <string name="lbl_contato">Algumas informações básicas</string>
    <string name="lbl_celular">Celular</string>
    <string name="lbl_email2">E-mail</string>
    <string name="lbl_quasela">Quase lá</string>
    <string name="lbl_cep">CEP</string>
    <string name="lbl_numero">Nº</string>
    <string name="btn_voltar">Botão Voltar</string>
    <string name="lbl_referencia">Ponto de Referência</string>
    <string name="lbl_logradouro">Logradouro</string>
    <string name="lbl_bairro">Bairro</string>
    <string name="lbl_cidade">Cidade</string>
    <string name="lbl_estado">Estado</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="informacoes_email">Aceito receber informações por E-mail</string>
    <string name="btn_entrar">Entrar</string>
    <string name="lbl_bemvindo">Bem vindo ao GoDinner</string>
    <string name="lbl_cortezia">Como cortezia nossa, em sua primeira compra você só paga a metade.</string>
    <string name="lbl_cpf">CPF</string>
    <string name="lbl_complemento">Complemento</string>
    <string name="lbl_entregarem">ENTREGAR EM</string>
    <string name="lbl_filtros">Filtros</string>
    <string name="lbl_pratos_restaurantes">Pratos ou Restaurantes</string>
    <string name="lbl_description">Image Item</string>
    <string name="lbl_categorias">Categorias</string>
    <string name="lbl_avaliacao_estrela">Avaliacao Estrela</string>
    <string name="lbl_logo_restaurante">Logo Restaurante</string>
    <string name="lbl_compartilhar">Compartilhar</string>
    <string name="lbl_imagem_entregador">Imagem Entregador</string>
    <string name="lbl_sacola">SACOLA</string>
    <string name="lbl_more">Ver Mais</string>
    <string name="lbl_mais">+</string>
    <string name="lbl_menos">-</string>
    <string name="lbl_meus_pedidos">Meus Pedidos</string>
    <string name="lbl_pedido">Pedido:</string>
    <string name="lbl_entrega">Entrega:</string>
    <string name="lbl_total_geral">Total Geral:</string>
    <string name="lbl_finalizar_compra">Finalizar Compra</string>
    <string name="lbl_esvaziar_sacola">Esvaziar sacola</string>
    <string name="title_section1">Início</string>
    <string name="title_section2">Sacola</string>
    <string name="title_section3">Pedidos</string>
    <string name="title_section4">Perfil</string>
    <string name="lbl_imagem_produto">Imagem Produto</string>
    <string name="lbl_promocoes">Promoções</string>
    <string name="lbl_todos">Todos</string>
    <string name="lbl_restaurantes_proximos">Restaurantes próximos</string>
    <string name="lbl_preco_padrao">R$ 0,00</string>
    <string name="lbl_nenhum_pedido">Nenhum Pedido</string>
    <string name="descricao_img_random">Descrição Random</string>
</resources>
