<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BemVindoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="16dp">

            <ImageButton
                android:id="@+id/btn_voltar"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/btn_voltar"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/logo_app"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#a4a2a2"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_bemvindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bemvindo"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#333"
            android:layout_marginTop="64dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cortezia"
            android:layout_below="@id/lbl_bemvindo"
            android:textSize="16sp"
            android:textColor="#200"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"/>

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_entrar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:backgroundTint="#f17346"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#f59c7c"
            app:strokeWidth="2dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>