<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro1Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="16dp">

            <ImageButton
                android:id="@+id/btn_voltar"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/btn_voltar"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/logo_app"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#a4a2a2"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="26dp"
            android:paddingEnd="22dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cadastro"
                android:textColor="#222"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email2"
                android:textSize="18sp"
                android:textColor="#555"
                android:labelFor="@id/txt_email"
                android:layout_marginTop="48dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_senha2"
                android:textSize="18sp"
                android:textColor="#555"
                android:labelFor="@id/txt_senha"
                android:layout_marginTop="4dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_senha_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_proximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_proximo"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:backgroundTint="@android:color/transparent"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#f59c7c"
            app:strokeWidth="2dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>