<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_app"
            android:visibility="visible"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ccc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:textSize="18sp"
                android:textColor="#555"
                android:labelFor="@id/txt_email"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:orientation="vertical"
                android:layout_below="@id/text3">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_senha"
                android:textSize="18sp"
                android:textColor="#555"
                android:labelFor="@id/txt_password"
                android:layout_below="@id/txt_email_layout"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:orientation="vertical"
                android:layout_below="@id/text4">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqueci_minha_senha"
                android:layout_below="@id/txt_password_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:textColor="#555"
                android:textSize="16sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <android.support.design.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_logar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_entrar"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="#b3b0b0"
                app:strokeWidth="2dp" />

            <android.support.design.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cadastrar"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="8dp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="#b3b0b0"
                app:strokeWidth="2dp"
                android:layout_below="@id/btn_logar" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#8e8c8c" />

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ou_conectar_com"
                android:textColor="#525252"
                android:textSize="12sp" />

            <View
                android:id="@+id/lineRight"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#8e8c8c" />
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
</ScrollView>